--- a/css/styles.css
+++ b/css/styles.css
@@ -739,22 +739,14 @@ transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
   box-shadow: 1px 4px 6px rgba(0, 0, 0, 0.16), 0px 0px 4px rgba(0, 0, 0, 0.06), 0px 1px 1px rgba(0, 0, 0, 0.12);
 }
 
+/* Backdrop and modal */
 
 
 
 
 
 
-/* .button-secondary-li {
-		font-weight: 500;
-	font-size: 16px;
-	line-height: 1.6; */
 
-	/* color: var(--primary-text-color); */
-
-
-	/* border-color: transparent; */
-	/* letter-spacing: 0.03em; */
  
   
 
