--- a/css/styles.css
+++ b/css/styles.css
@@ -81,8 +81,7 @@ body {
   padding: 0;
   margin: 0 0 0 85px;
   list-style: none;
-  text-decoration: none;
-}
+  }
 .item-nav {
   margin-right: 50px;
 }
@@ -126,6 +125,10 @@ body {
   color: var(--accent-color);
    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+.contacts-display {
+  display: flex;
+  margin-left: auto;
+}
 
 .contact-display .contacts:hover,
 .contact-display .contacts:focus {
@@ -134,21 +137,18 @@ body {
 .contact-display .contacts {
   text-decoration: none;
   display: inline-flex;
-  /* display: block; */
   color: var(--primary-text-color)
+  
 }
-.contacts-display {
-  display: flex;
-  margin-left: auto;
-}
+
 .contact-display {
   /* width: calc((100% - 50px) / 2); */
   margin-right: 30px;
-  /* display: inline-flex; */
   font-weight: 500;
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.02em;
+  
 }
 .contact-display:last-child {
   margin-right: 0;
@@ -173,7 +173,7 @@ body {
 transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .svg-item-envelope, .svg-item-telephone {
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 
@@ -207,7 +207,6 @@ transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
   color: var(--background-color);
 }
 .container.hero {
-  text-align: center;
   width: 696px;
 }
 .section {
@@ -360,9 +359,14 @@ transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
   line-height: 1.19;
 }
 /* Social-links */
-.social-links {
-  /* list-style: none; */
-  text-decoration: none;
+
+.social {
+  display: flex;
+  /* justify-content: center;
+  align-items: center; */
+  }
+
+.social-links {  
   display: flex;
   justify-content: center;
   align-items: center;
@@ -373,13 +377,6 @@ transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-
-.social {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  /* padding-left: 0; */
-}
 .social-link-li {
   margin-right: 10px;
 }
@@ -443,7 +440,6 @@ transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 .button {
   display: inline-flex;
   align-items: center;
-  justify-content: center;
   border-radius: 4px;
   /* min-width: 200px; */
   color: var(--title-text-color);
@@ -461,7 +457,6 @@ transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
   padding: 10px 32px;
   color: var(--background-color);
   background-color: var(--accent-color);
-  text-decoration: none;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
 /* Footer */
@@ -521,7 +516,6 @@ transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
   font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
-  /* text-decoration: none; */
   color: var(--background-color);
   text-transform: uppercase;
 }
@@ -540,21 +534,20 @@ transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
   margin-left: 10px;
 }
 .social-links-footer {
-  text-decoration: none;
   display: flex;
   justify-content: center;
   align-items: center;
   width: 44px;
   height: 44px;
   border-radius: 50%;
+  background-color: rgba(255, 255, 255, 0.1);
   fill: var(--background-color);
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.social-links-footer {
-  background-color: rgba(255, 255, 255, 0.1);
-}
+
 .social-links-footer:hover {
   background-color: var(--accent-color);
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
 
   .form-subscribe {
@@ -570,7 +563,7 @@ transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
     padding-left: 16px;
     margin-right: 12px;
     font-size: 16px;
-    line-height: 1,25;
+    line-height: 1.25;
     letter-spacing: 0.03em;
   }
 
@@ -582,25 +575,10 @@ transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 	justify-content: center;
 	margin-bottom: 50px;
 }
-.button-portfolio:hover,
-.button-portfolio:focus {
-	color: #212121;
-}
-
-
 
 .button.secondary {
   margin-right: 8px;
-  /* justify-content: center;
-  align-items: center; */
-  /* padding: 6px 22px; */
-  /* color: var(--accent-color);
-  background-color: var(--background-color);
-  text-decoration: none; */
-  /* font-weight: 500;
-  font-size: 16px;
-  line-height: 1.62;
-  letter-spacing: 0.03em; */
+     /* padding: 6px 22px; */
 }
 .button.secondary:last-child {
   margin-right: 0;
@@ -609,18 +587,13 @@ transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
   padding: 6px 22px;
   border-radius: 4px;
   border: none;
-  background: var(--secondary-background-color);
+  background-color: var(--secondary-background-color);
   cursor: pointer;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-/* .button.secondary:hover .button-secondary-li,
- .button.secondary:focus .button-secondary-li {
-  background-color: var(--accent-color); */
-
 .button-secondary-li:hover,
 .button-secondary-li:focus {
-  /* color: var(--accent-color) */
   background-color: var(--accent-color);  
 }
 
@@ -684,15 +657,12 @@ transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
   text-decoration: none;
 }
 
-
-
 .portfolio-img {
   display: block;
   /* margin-right: 0; */
 }
 .card-content {
   padding: 20px 24px;
-  box-sizing: border-box;
   border-left: 1px solid #eeeeee;
   border-right: 1px solid #eeeeee;
   border-bottom: 1px solid #eeeeee;
@@ -702,16 +672,12 @@ transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
   overflow: hidden;
 }
 
- 
-
-
-.text-on-photo {
+ .text-on-photo {
   position: absolute;
   background-color: rgba(33, 150, 243, 0.9);
   opacity: 0;
   top: 0;
   left: 0;
-  /* display: linear; */
   transform: translateY(50%);
   transition: 500ms cubic-bezier(0.4, 0, 0.2, 1);
   width: 100%;
