--- a/css/styles.css
+++ b/css/styles.css
@@ -441,6 +441,7 @@ transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
   display: inline-flex;
   align-items: center;
   border-radius: 4px;
+   border: 1px solid transparent;
   /* min-width: 200px; */
   color: var(--title-text-color);
   background-color: var(--background-color);
@@ -454,6 +455,7 @@ transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
 
 .button.primary {
+ 
   padding: 10px 32px;
   color: var(--background-color);
   background-color: var(--accent-color);
@@ -707,8 +709,67 @@ transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 /* Backdrop and modal */
 
+.modal {
+  width: 528px;
+  height: 581px;
+  background-color: var(--background-color);
+  border-radius: 4px;
+  box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.2), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12);;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 40px;
+  outline: 1px solid tomato;
+}
+.modal-title {
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 1.15;
+  color: var(--title-text-color);
+  margin-top: 0;
+  margin-bottom: 30px;
+  text-align: center;
+
+}
+
+.form-field {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 28px;
+}
+
+.label-title {
+  position: absolute;
+  top: 50%;
+  left: 30px;
+  transform: translateY(-50%);
+  transition: transform 250ms linear;
+}
+.form-input {
+  padding: 12px 42px;
+  border-radius: 4px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  /* color: var(--primary-text-color); */
+}
+.form-input:focus + .label-title,
+.form-input:not(:placeholder-shown) + .label-title {
+  transform: translateY(-50px);
+  color: var(--accent-color);
+}
 
 
+
+.modal-button {
+display: block;
+color: var(--background-color);
+background-color: var(--accent-color);
+padding: 10px 56px;
+cursor: pointer;
+margin-left: auto;
+margin-right: auto;
+min-width: 200px;
+min-height: 50px;
+}
 
 
 
