--- a/css/styles.css
+++ b/css/styles.css
@@ -709,7 +709,25 @@ transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 /* Backdrop and modal */
 
+.backdrop {
+	
+	position: fixed;
+	z-index: 100;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background-color: rgb(49, 48, 46, 0.5);
+
+	
+	
+	/* transition: opacity 0.5s cubic-bezier(0.4, 0, 0.2, 1) 0.2s; */
+	opacity: 1;
+}
+
+
 .modal {
+  position: relative;
   width: 528px;
   height: 581px;
   background-color: var(--background-color);
@@ -720,6 +738,21 @@ transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
   padding: 40px;
   outline: 1px solid tomato;
 }
+.close-modal-button {
+  position: absolute;
+  top: 8px;
+  right: 8px;
+  background-color: var(--background-color);
+  width: 30px;
+	height: 30px;
+	border-radius: 50%;
+	border: 1px solid rgba(0, 0, 0, 0.1);
+	cursor: pointer;
+}
+.close-modal-button:hover .close-icon {
+	fill: var(--accent-color);
+}
+
 .modal-title {
   font-weight: 700;
   font-size: 20px;
@@ -741,20 +774,52 @@ transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 .label-title {
   position: absolute;
   top: 50%;
-  left: 30px;
+  left: 42px;
   transform: translateY(-50%);
   transition: transform 250ms linear;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.01em;
+}
+.label-title.comment {
+top: 12px;
+left: 16px;
+
+}
+.comment-area {
+  padding: 12px 16px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  resize: none;
+  height: 120px;
+}
+
+.comment-area:focus + .label-title.comment,
+.comment-area:not(:placeholder-shown) + .label-title.comment {
+  transform: translateY(-30px);
+  color: var(--accent-color);
 }
 .form-input {
   padding: 12px 42px;
   border-radius: 4px;
   border: 1px solid rgba(33, 33, 33, 0.2);
-  /* color: var(--primary-text-color); */
+  
 }
 .form-input:focus + .label-title,
 .form-input:not(:placeholder-shown) + .label-title {
-  transform: translateY(-50px);
+  transform: translate(-30px, -40px);
   color: var(--accent-color);
+}
+.modal-svg {
+  position: absolute;
+  top: 50%;
+  left: 19px;
+  transform: translateY(-50%);
+  display: inline-block;
+  }
+  .form-input:focus ~ .modal-svg {
+	fill: #2196f3;
 }
 
 
