--- a/css/styles.css
+++ b/css/styles.css
@@ -717,13 +717,17 @@ transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 	left: 0;
 	width: 100%;
 	height: 100%;
-	background-color: rgb(49, 48, 46, 0.5);
-
+	background-color: rgb(49, 48, 46, 0.5);	
+  transition: 500ms cubic-bezier(0.4, 0, 0.2, 1);
+  transform: scale(1);
 	
-	
-	/* transition: opacity 0.5s cubic-bezier(0.4, 0, 0.2, 1) 0.2s; */
-	opacity: 1;
 }
+.backdrop.is-hidden {
+	pointer-events: none;	
+  opacity: 0;
+  transform: scale(2);
+}
+
 
 
 .modal {
@@ -736,8 +740,8 @@ transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
   margin-left: auto;
   margin-right: auto;
   padding: 40px;
-  outline: 1px solid tomato;
-}
+  /* outline: 1px solid tomato; */
+  }
 .close-modal-button {
   position: absolute;
   top: 8px;
@@ -776,29 +780,37 @@ transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
   top: 50%;
   left: 42px;
   transform: translateY(-50%);
-  transition: transform 250ms linear;
+  /* transition: transform 250ms linear; */
   font-weight: 400;
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.01em;
+  transition: 500ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+.form-field.area {
+  margin-bottom: 20px;
+}
+
 .label-title.comment {
 top: 12px;
 left: 16px;
-
+transition: 500ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
 .comment-area {
   padding: 12px 16px;
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
   resize: none;
   height: 120px;
+  
 }
 
 .comment-area:focus + .label-title.comment,
 .comment-area:not(:placeholder-shown) + .label-title.comment {
   transform: translateY(-30px);
   color: var(--accent-color);
+  transition: 500ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .form-input {
   padding: 12px 42px;
@@ -810,6 +822,7 @@ left: 16px;
 .form-input:not(:placeholder-shown) + .label-title {
   transform: translate(-30px, -40px);
   color: var(--accent-color);
+  transition: 500ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .modal-svg {
   position: absolute;
@@ -820,6 +833,49 @@ left: 16px;
   }
   .form-input:focus ~ .modal-svg {
 	fill: #2196f3;
+}
+.checkbox-container {
+  position: relative;
+  display: inline-block;
+  margin-bottom: 30px;
+}
+.checkbox-form {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.71;
+  margin-left: 20px;
+
+}
+.checkbox-container .checkbox {
+	-webkit-appearance: none;
+	display: inline-block;
+}
+.checkbox-icon {
+	content: "";
+	position: absolute;
+	/* display: flex; */
+	/* align-items: center; */
+	/* justify-content: center; */
+	width: 16px;
+	height: 15px;
+
+	top: 50%;
+	left: 2px;
+	transform: translateY(-50%);
+
+	border: 2px solid #212121;
+	border-radius: 2px;
+}
+.checkbox:checked ~ .checkbox-icon {
+  background-image: url(../images/icon-checkbox.svg);
+  background-color: var(--accent-color);
+  background-size: contain;
+  background-origin: border-box;
+  border-color: var(--accent-color);
+
+}
+.checkbox-form a {
+  color: var(--accent-color);
 }
 
 
