--- a/css/styles.css
+++ b/css/styles.css
@@ -732,8 +732,8 @@ transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 .modal {
   position: relative;
-  width: 528px;
-  height: 581px;
+  max-width: 528px;
+  max-height: 581px;
   background-color: var(--background-color);
   border-radius: 4px;
   box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.2), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12);;
@@ -770,17 +770,16 @@ transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 .form-field {
   position: relative;
-  display: flex;
-  flex-direction: column;
+  /* display: flex; */
+  /* flex-direction: column; */
   margin-bottom: 28px;
-}
+ }
 
 .label-title {
   position: absolute;
   top: 50%;
   left: 42px;
   transform: translateY(-50%);
-  /* transition: transform 250ms linear; */
   font-weight: 400;
   font-size: 14px;
   line-height: 1.14;
@@ -789,7 +788,7 @@ transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .form-field.area {
   margin-bottom: 20px;
-}
+ }
 
 .label-title.comment {
 top: 12px;
@@ -803,26 +802,29 @@ transition: 500ms cubic-bezier(0.4, 0, 0.2, 1);
   border-radius: 4px;
   resize: none;
   height: 120px;
-  
-}
+  width: 100%;
+  }
 
 .comment-area:focus + .label-title.comment,
 .comment-area:not(:placeholder-shown) + .label-title.comment {
   transform: translateY(-30px);
   color: var(--accent-color);
   transition: 500ms cubic-bezier(0.4, 0, 0.2, 1);
+  font-size: 12px;
 }
 .form-input {
   padding: 12px 42px;
   border-radius: 4px;
   border: 1px solid rgba(33, 33, 33, 0.2);
-  
+  width: 100%;
+  font-size: 14px;
 }
 .form-input:focus + .label-title,
 .form-input:not(:placeholder-shown) + .label-title {
   transform: translate(-30px, -40px);
   color: var(--accent-color);
   transition: 500ms cubic-bezier(0.4, 0, 0.2, 1);
+  font-size: 12px;
 }
 .modal-svg {
   position: absolute;
@@ -877,8 +879,6 @@ transition: 500ms cubic-bezier(0.4, 0, 0.2, 1);
 .checkbox-form a {
   color: var(--accent-color);
 }
-
-
 
 .modal-button {
 display: block;
