--- a/css/styles.css
+++ b/css/styles.css
@@ -551,6 +551,7 @@ transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
   background-color: var(--accent-color);
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
+  
 
   .form-subscribe {
     display: flex;
@@ -720,7 +721,7 @@ transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 	background-color: rgb(49, 48, 46, 0.5);	
   transition: 500ms cubic-bezier(0.4, 0, 0.2, 1);
   transform: scale(1);
-	
+	padding: 30px;
 }
 .backdrop.is-hidden {
 	pointer-events: none;	
@@ -791,7 +792,7 @@ transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
  }
 
 .label-title.comment {
-top: 12px;
+top: 20px;
 left: 16px;
 transition: 500ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -807,7 +808,7 @@ transition: 500ms cubic-bezier(0.4, 0, 0.2, 1);
 
 .comment-area:focus + .label-title.comment,
 .comment-area:not(:placeholder-shown) + .label-title.comment {
-  transform: translateY(-30px);
+  transform: translateY(-40px);
   color: var(--accent-color);
   transition: 500ms cubic-bezier(0.4, 0, 0.2, 1);
   font-size: 12px;
